# drifter

./: '  .gitignore  2_mppi.py  Untitled.ipynb  batched_memory.py  collect_data.py  dataloader.py  display.py  drifter_dataloader.py  drifter_dataloader_sequential.py  drifter_env.py  env_model.py  env_vision_model.py  exploration_policy.py  inverse_dynamics.py  main.py  memory.py  model.pt  model_based_simulation.py  mppi.py  pyproject.toml  render_episode.py  robot.xacro  robot.xml  sac.py  simulation.py  terrain.py  trackgen.py  train.py  train_inverse_dynamics.py  train_vision_model.py  wfc.py
.ipynb_checkpoints/: memory-checkpoint.py
writeup/: diagram.tex  writeup.tex
